--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -56,4 +56,9 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <connectionStrings>
+    <add name="DefaultConnection"
+         connectionString="Data Source=C:\Users\amozalev\RiderProjects\WebApplication1\WebApplication1\App_Data\database;Version=3;"
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
