--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -8047,6 +8047,9 @@
     <TypeScriptCompile Include="client\src\react-app-env.d.ts" />
     <TypeScriptCompile Include="client\src\routes.tsx" />
     <TypeScriptCompile Include="client\src\serviceWorker.ts" />
+    <TypeScriptCompile Include="client\src\store\actions.ts" />
+    <TypeScriptCompile Include="client\src\store\reducer.ts" />
+    <TypeScriptCompile Include="client\src\store\types.ts" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
