--- a/WebApplication1/client/package.json
+++ b/WebApplication1/client/package.json
@@ -7,10 +7,13 @@
     "@types/node": "12.6.8",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
+    "@types/react-redux": "^7.1.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.5",
     "typescript": "3.5.3"
   },
   "scripts": {
